Refactor test methods and rename for clarity: replace "test" prefixes with descriptive "should" prefixes in method names across relevant classes.